Fix (frontend-config) 'PP-007': Remove redundant `overflow-hidden` style from form block in styles.css

--- a/frontend/web/src/styles.css
+++ b/frontend/web/src/styles.css
@@ -205,8 +205,6 @@ main {
   }
 
   form {
-    @apply overflow-hidden;
-
     .input-field {
       @apply flex flex-col gap-2 w-full my-6;
 
